--- a/res/layout/shell_view.xml
+++ b/res/layout/shell_view.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/progress">
-        <ImageButton android:id="@+id/stop_reload_button"
+        <!--ImageButton android:id="@+id/stop_reload_button"
             android:layout_width="38dp"
             android:layout_height="38dp"
             android:src="@android:drawable/ic_menu_close_clear_cancel"
@@ -44,7 +44,7 @@
             android:layout_width="38dp"
             android:layout_height="38dp"
             android:src="@android:drawable/ic_media_next"
-            android:scaleType="center" />
+            android:scaleType="center" /-->
     </LinearLayout>
     <FrameLayout android:id="@+id/contentview_holder"
         android:layout_width="match_parent"
